upload my image
upload my image

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				<div class="col-lg-2"></div>
 				
 				<div class="team col-lg-4 col-lg-offset-4">
-					<img class="img-circle" src="assets/img/team04.jpg" height="90" width="90">
+					<img class="img-circle" src="assets/img/myphoto1.jpg" height="120" width="120">
 					<h4>Mohamed Alguhiem</h4>
 					<h5><i>Web Developer </i></h5>
 					<p>Malguhiem@gmail.com.</p>
